user managing feature skeleton added.

--- a/QTClient/Client/mainwindow.ui
+++ b/QTClient/Client/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="overview">
      <property name="toolTip">
@@ -117,6 +117,57 @@
      <attribute name="title">
       <string>Investments</string>
      </attribute>
+    </widget>
+    <widget class="QWidget" name="system">
+     <attribute name="title">
+      <string>System</string>
+     </attribute>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>30</y>
+        <width>231</width>
+        <height>151</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>User Management</string>
+      </property>
+      <widget class="QWidget" name="">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>30</y>
+         <width>121</width>
+         <height>101</height>
+        </rect>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QPushButton" name="changePassword">
+          <property name="text">
+           <string>Change Password</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="addUser">
+          <property name="text">
+           <string>Add New user</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="getUsers">
+          <property name="text">
+           <string>Get Users</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
     </widget>
    </widget>
   </widget>
