password masked and refresh button added.

--- a/QTClient/Client/changepassword.ui
+++ b/QTClient/Client/changepassword.ui
@@ -33,7 +33,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="oldPassword"/>
+       <widget class="QLineEdit" name="oldPassword">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -47,7 +51,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="newPassword"/>
+       <widget class="QLineEdit" name="newPassword">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -61,13 +69,17 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="confirmPassword"/>
+       <widget class="QLineEdit" name="confirmPassword">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>160</x>
