--- a/QTClient/Client/loginwindow.ui
+++ b/QTClient/Client/loginwindow.ui
@@ -26,7 +26,7 @@
     <string>Login</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>180</x>
@@ -60,7 +60,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="password"/>
+       <widget class="QLineEdit" name="password">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
